restrict-malicious-exec-pods/.chainsaw-test/good-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: restrict-malicious-exec-pods-role
rules:
  - apiGroups: ["*"]
    resources: ["pods/exec"]
    verbs: ["get"]
  - apiGroups: ["*"]
    resources: ["pods"]
    verbs: ["get"]
