restrict-malicious-exec-pods/.chainsaw-test/rb-bad.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: badrb01
subjects:
- kind: ServiceAccount
  name: foo
  namespace: test2
roleRef:
  kind: Role  
  name: restrict-malicious-exec-pods-role
  apiGroup: rbac.authorization.k8s.io
