restrict-malicious-exec-pods/restrict-malicious-exec-pods-clusterrole.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-malicious-exec-pods-clusterrole
  annotations:
    policies.kyverno.io/title: Getting shell on pods
    policies.kyverno.io/category: RBAC
    policies.kyverno.io/severity: high
    policies.kyverno.io/minversion: 1.12.0
    kyverno.io/kyverno-version: 1.12.0
    kyverno.io/kubernetes-version: "1.32"
    policies.kyverno.io/subject: ClusterRole
    policies.kyverno.io/description: >-
      This policy will check for all the subject like ServiceAccounts/Users/Groups which are mapped with a ClusterRole allowing the user to exec inside a pod.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: restrict-exec-pods-clusterrole
      match:
        any:
        - resources:
            kinds:
            - ClusterRole
      context:
        - name: clusterrolebinding
          apiCall:
            urlPath: "/apis/rbac.authorization.k8s.io/v1/clusterrolebindings"
            jmesPath: "items[?roleRef.name=='{{ request.object.metadata.name }}']"
      validate:
        message: >- 
           ClusterRoleBinding {{ clusterrolebinding[].metadata.name }} with subjects {{ clusterrolebinding[].subjects[].name }}
           is using role {{request.object.metadata.name}} which can allow users to exec inside a pod.
        deny:
          conditions:
            any:
              - key: "{{ ( contains(to_array(request.object.rules[].verbs[]), 'create') && contains(to_array(request.object.rules[].resources[]), 'pods/exec')) && (contains(to_array(request.object.rules[].verbs[]), 'get') && contains(to_array(request.object.rules[].resources[]), 'pods')) && contains(to_array(request.object.rules[].apiGroups[]), '*') }}"
                operator: Equals
                value: true
