restrict-malicious-exec-pods/restrict-malicious-exec-pods-role.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-malicious-exec-pods-role
  annotations:
    policies.kyverno.io/title: Getting shell on pods
    policies.kyverno.io/category: RBAC
    policies.kyverno.io/severity: high
    policies.kyverno.io/minversion: 1.12.0
    kyverno.io/kyverno-version: 1.12.0
    kyverno.io/kubernetes-version: "1.32"
    policies.kyverno.io/subject: Role
    policies.kyverno.io/description: >-
      This policy will check for all the subject like ServiceAccounts/Users/Groups which are mapped with a Role allowing the user to exec inside a pod.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: restrict-exec-pods-roles
      match:
        any:
          - resources:
              kinds:
                - Role
      context:
        - name: rolebinding
          apiCall:
            urlPath: "/apis/rbac.authorization.k8s.io/v1/namespaces/{{ request.object.metadata.namespace }}/rolebindings"
            jmesPath: "items[?roleRef.name=='{{ request.object.metadata.name }}']"
      validate:
        message: >- 
           RoleBinding {{ rolebinding[].metadata.name }} with subjects {{ rolebinding[].subjects[].name }} 
           is using role {{request.object.metadata.name}} which can allow users to exec inside a pod.
        deny:
          conditions:
            any:
              - key: "{{ ( contains(to_array(request.object.rules[].verbs[]), 'create') && contains(to_array(request.object.rules[].resources[]), 'pods/exec')) && (contains(to_array(request.object.rules[].verbs[]), 'get') && contains(to_array(request.object.rules[].resources[]), 'pods')) && contains(to_array(request.object.rules[].apiGroups[]), '*') }}"
                operator: Equals
                value: true
