restrict-malicious-exec-pods/.chainsaw-test/chainsaw-step-01-assert-2.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-malicious-exec-pods-role
spec:
  validationActions: [Deny]
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
